--- a/app/views/plays/new.html.erb
+++ b/app/views/plays/new.html.erb
@@ -2,7 +2,14 @@
   <% (1..Puzzle::DIMENSION).each do |i|  %>
     <tr>
       <% (1..Puzzle::DIMENSION).each do |j|  %>
-        <td><%= @puzzle.matrix[i-1, j-1] %></td>
+        <td>
+          <% value, zero_pos = @puzzle.matrix[i-1, j-1], @puzzle.zero_pos%>
+          <% if ((i-1 == zero_pos[0]) || (j-1 == zero_pos[1])) && ([i-1, j-1] != zero_pos)  %>
+            <%= link_to value, edit_plays_path %>
+          <% else %>
+            <%= value %>
+          <% end %>
+        </td>
       <% end %>
     </tr>
   <% end %>
