--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -18,7 +18,7 @@ table{
   border-collapse: collapse;
   text-align: center;
   vertical-align: middle;
-  margin-top: 20px;
+  margin: 20px 0;
 }
 
 #error{
