Adding n dimension support

--- a/app/views/plays/new.html.erb
+++ b/app/views/plays/new.html.erb
@@ -1,6 +1,7 @@
 <div id='notice'><%= flash[:notice] %></div>
 <div id='error'><%= flash[:error] %></div>
-<%= link_to "Start new game", new_plays_path %>
+<%= link_to "Start new game(4)", new_plays_path(:dim => 4)%>
+<%= link_to "3", new_plays_path(:dim => 3) %>
 <table>
   <% @puzzle.matrix.to_a.map do |row |%>
     <tr>
