--- a/app/views/plays/new.html.erb
+++ b/app/views/plays/new.html.erb
@@ -6,12 +6,8 @@
   <% @puzzle.matrix.map do |row |%>
     <tr>
       <% row.map do |item|  %>
-        <td class = <%= 'clickable' if clickable?(item) %> >
-          <% if clickable? item %>
-            <%= link_to item, edit_plays_path(:p => item) %>
-          <% else %>
-            <%= item unless item.zero?  %>
-          <% end %>
+        <td class = 'clickable' >
+           <%= link_to(item, edit_plays_path(:p => item)) unless item.zero? %>
         </td>
       <% end %>
     </tr>
